dhall/tests/type-inference/failure/unit/ListLiteralNotType.txt
Type error: error: InvalidListType
 --> <current file>:1:1
  |
1 | [ Bool ]
  | ^^^^^^^^ InvalidListType
  |
